kube-yaml-files/apps.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: meat-service
spec:
 selector:
   diet: meat
 ports:
   - protocol: TCP
     port: 80 
     targetPort: 80
     nodePort: 32003
 type: NodePort
---
apiVersion: v1
kind: Service
metadata:
 name: vegetarian-service
spec:
 selector:
   diet: vegetarian
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
     nodePort: 32002
 type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: meat-deployment
 labels:
   role: app
   diet: meat
   version: v1
spec:
 replicas: 1
 selector:
   matchLabels:
     role: app
     diet: meat
 template:
   metadata:
     labels:
       role: app
       diet: meat
   spec:
     containers:
      - name: app
        image: "meat-api-v1:0.5"
        imagePullPolicy: Never

      - name: server
        image: "nginx-meat:0.5"
        imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: meat-deployment2
 labels:
   role: app
   diet: meat
   version: v2
spec:
 replicas: 1
 selector:
   matchLabels:
     role: app
     diet: meat
 template:
   metadata:
     labels:
       role: app
       diet: meat
   spec:
     containers:
      - name: app
        image: "meat-api-v2:1.09"
        imagePullPolicy: Never

      - name: server
        image: "nginx-meat:0.5"
        imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: veggie-deployment
 labels:
   role: app
   diet: vegetarian
spec:
 replicas: 1
 selector:
   matchLabels:
     role: app
     diet: vegetarian
 template:
   metadata:
     labels:
       role: app
       diet: vegetarian
   spec:
     containers:
      - name: app
        image: "veg-api:0.5"
        imagePullPolicy: Never
      - name: server
        image: "nginx-veggie:0.5"
        imagePullPolicy: Never
